--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ MAIL_SERVER=''
 MAIL_SERVER_LOGIN=''
 MAIL_SERVER_PASSWORD=''
 MAIL_RECIPIENT=''
+
+DB_HOST_NAME=''
+DB_USER_NAME=''
+DB_PASSWORD=''
+DB_NAME=''
